; ModuleID = '/home/carl/AnghaBench/libuv/src/extr_uv-common.c_uv__malloc.c'
source_filename = "/home/carl/AnghaBench/libuv/src/extr_uv-common.c_uv__malloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* (i64)* }

@uv__allocator = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @uv__malloc(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = icmp ugt i64 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load i8* (i64)*, i8* (i64)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @uv__allocator, i32 0, i32 0), align 8
  %8 = load i64, i64* %3, align 8
  %9 = call i8* %7(i64 %8)
  store i8* %9, i8** %2, align 8
  br label %11

10:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %11

11:                                               ; preds = %10, %6
  %12 = load i8*, i8** %2, align 8
  ret i8* %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
